fix: scrolling on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -167,6 +167,12 @@ text-shadow: 2px 2px #ffa0a0;
   }
 }
 
+@media screen and (max-width: 767px) {
+  body {
+    -webkit-overflow-scrolling: touch;
+  }
+}
+
 @media only screen and (max-width: 510px) {
   .content {
     width: 100%;
